# texture-space-decals

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/shader/: decal_project_fs.glsl  depth_fs.glsl  depth_vs.glsl  mesh_fs.glsl  mesh_vs.glsl  texture_init_fs.glsl  uv_space_vs.glsl
